# ssh-tunnel-manager

./: .gitignore  API.md  README.md  config.json  config.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js  styles.css
src/ssh_tunnel_manager/: api.py  app.py  cli.py  models.py  runtime.py  services.py  settings.py  store.py
